# vbspview

./: .gitignore  Cargo.toml  README.md  flake.nix  mats.txt
.github/workflows/: ci.yml
src/: bsp.rs  camera.rs  control.rs  demo.rs  loader.rs  main.rs  material.rs  prop.rs  renderer.rs  ui.rs  wrapping.rs
