[package]
name = "vbspview"
version = "0.1.0"
edition = "2021"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"

[dependencies]
three-d = { version = "0.16.3", features = ["egui-gui"] }
three-d-asset = { version = "0.6" }
vbsp = "0.4.0"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.37"
itertools = "0.12.0"
vmdl = { version = "*", git = "https://github.com/icewind1991/vmdl" }
#vmdl = { version = "*", path = "../vmdl" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
cgmath = "0.18.0"
tf-demo-parser = { version = "0.4.0", git = "https://github.com/demostf/parser" }
steamid-ng = "1.0.0"
clap = { version = "4.0.29", features = ["derive"] }
splines = { version = "4.1.1", features = ["cgmath"] }
vtf = "0.1.6"
vmt-parser = { version = "0.1", git = "https://github.com/icewind1991/vmt-parser" }
image = "0.23.14"
tf-asset-loader = { version = "0.1", features = ["bsp"] }

# make tf-asset-loader use the same vbsp version
[patch.crates-io]
#vbsp = { version = "0.4.0", path = "../bsp" }
vbsp = { version = "0.4.0", git = "https://github.com/icewind1991/vbsp" }

[profile.dev.package."*"]
opt-level = 2

[features]
dump_materials = []